Fix link_protocol_is_local_ipv46 for ipv4 on some ipv6-enabled machines

Ensure that saddr is compared to an ipv4 local_addr, not to an ipv6 one,
by setting hints.ai_family before calling getaddrinfo().

https://bugzilla.gnome.org/show_bug.cgi?id=693636